--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -1,11 +1,8 @@
 .loginContainer {
-    width: 397px;
-    height: 785px;
-    position: absolute;
-    top: 1px;
-    left: 1px;
-    background: #FFFFFF;
-    border: 2px solid #000000;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    background: #F2F1FA;
     font-family: 'Comic Sans MS';
   }
   
@@ -31,4 +28,6 @@
     text-align: center;
     margin-top: 20px;
   }
+
+
   
