--- a/src/pages/Landing/Landing.module.css
+++ b/src/pages/Landing/Landing.module.css
@@ -1,33 +1,74 @@
-.loginContainer {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    background: #F2F1FA;
-    font-family: 'Comic Sans MS';
-  }
-  
-  .loginContainer h1 {
-    text-align: center;
-  }
-  
-  .loginContainer label {
-    display: block;
-  }
-  
-  .loginContainer input {
-    display: block;
-    width: 100%;
-  }
-  
-  .loginContainer button {
-    display: block;
-    margin-top: 10px;
-  }
-  
-  .loginContainer div:last-child {
-    text-align: center;
-    margin-top: 20px;
-  }
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo img {
+  width: 150px;
+  height: auto;
+}
+
+.title {
+  font-size: 34px;
+  color: #484473;
+  font-family: 'inter';
+  font-weight: bold;
+  margin-top: 20px;
+}
+
+.description {
+  color: #484473; /* Description text color */
+  font-size: 16px; /* Description font size */
+  margin-top: 53px; /* Distance to title */
+}
 
 
-  
+.image2 {
+  width: 300px;
+  height: auto;
+  margin-top: 20px;
+}
+
+
+.buttonRow {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 0 auto;
+}
+
+.buttonRow button {
+  font-size: 14px;
+  width: 48%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 14px 59px;
+  border-radius: 30px; /* Rounded borders */
+  border: 2px solid #15104D; /* Border color for both buttons */
+  transition: background-color 0.3s, color 0.3s;
+  cursor: pointer; /* Change cursor to pointer on hover */
+}
+
+.buttonRow button:nth-child(1) {
+  background-color: #ffffff; /* Login button background color */
+  color: #15104D;
+}
+
+.buttonRow button:nth-child(2) {
+  background-color: #15104D; /* Signup button background color */
+  color: #ffffff; /* Signup button text color */
+}
+
+.buttonRow button:hover {
+  background-color: #15104D; /* Hover background color */
+  color: #ffffff; /* Hover text color */
+}
+
+.buttonRow button:nth-child(2):hover {
+  background-color: #ffffff; /* Hover background color */
+  color: #15104D;
+}
