--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -1,33 +1,32 @@
 .loginContainer {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    background: #F2F1FA;
-    font-family: 'Comic Sans MS';
-  }
-  
-  .loginContainer h1 {
-    text-align: center;
-  }
-  
-  .loginContainer label {
-    display: block;
-  }
-  
-  .loginContainer input {
-    display: block;
-    width: 100%;
-  }
-  
-  .loginContainer button {
-    display: block;
-    margin-top: 10px;
-  }
-  
-  .loginContainer div:last-child {
-    text-align: center;
-    margin-top: 20px;
-  }
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  background: #F2F1FA;
+  font-family: 'inter';
+}
 
+.inputfield {
+  font-size: 14px;
+  padding: 14px;
+  color: #8885AC;
+  width: 100%;
+  box-sizing: border-box; /* Ensure the padding and width are included in the total width */
+}
 
-  
+.inputfield:not(:first-child) {
+  margin-top: 28px;
+}
+
+.loginContainer button {
+  display: block;
+  margin-top: 10px;
+}
+
+.top {
+  background-color: white;
+}
+
+.bottom {
+  width: 95%;
+}
