--- a/src/pages/Dashboard/Dashboard.module.css
+++ b/src/pages/Dashboard/Dashboard.module.css
@@ -7,7 +7,7 @@
     font-family: 'inter';
 }
 
-.helloContainer {
+.innerContainer {
     width: 95%;
     background-color: white;
     margin: 0 auto;
