--- a/src/pages/Landing/Landing.module.css
+++ b/src/pages/Landing/Landing.module.css
@@ -1,8 +1,32 @@
 .container {
   display: flex;
+  width: 100%;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: #F2F1FA;
+}
+
+.logo {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.image2 {
+  width: 33.5px;
+}
+
+.bottom {
+  padding-top: 88.7px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  border-top-left-radius: 16px;
+  border-top-right-radius: 16px;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 20px;
 }
 
 .logo img {
@@ -21,16 +45,11 @@
 .description {
   color: #484473; /* Description text color */
   font-size: 16px; /* Description font size */
-  margin-top: 53px; /* Distance to title */
+  margin-top: 24px; /* Distance to title */
+  margin-bottom: 38px;
+  width: 50%;
+  text-align: center;
 }
-
-
-.image2 {
-  width: 300px;
-  height: auto;
-  margin-top: 20px;
-}
-
 
 .buttonRow {
   margin-top: 20px;
@@ -54,7 +73,7 @@
 }
 
 .buttonRow button:nth-child(1) {
-  background-color: #ffffff; /* Login button background color */
+  background-color: #F2F1FA; /* Login button background color */
   color: #15104D;
 }
 
@@ -71,4 +90,9 @@
 .buttonRow button:nth-child(2):hover {
   background-color: #ffffff; /* Hover background color */
   color: #15104D;
+}
+
+.top {
+  background-color: white;
+  width: 100%;
 }
