--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -7,11 +7,21 @@
     height: 80px;
     background: #E1E0F1;
     border-radius: 16px 16px 0px 0px;
-    position: fixed;
     bottom: 0;
     left: 0;
     right: 0;
+    margin-top: 30px;
   }
+
+  .footer{
+    max-width: 400px;
+}
+
+@media screen and (max-width: 400px) {
+    .footer {
+        max-width: 400px;
+    }
+ }
   
   .menuIcon {
     display: flex;
