--- a/src/components/Timer/Timer.module.css
+++ b/src/components/Timer/Timer.module.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     background: #F2F1FA;
     font-family: 'inter';
+    flex-grow: 1;
 }
 
 .button {
@@ -30,6 +31,7 @@
   }
 
   .targetTime {
+      margin-top: 50px;
     display: flex;
     justify-content: center;
     font-size: 14px;
