--- a/src/components/Calendar/Calendar.module.css
+++ b/src/components/Calendar/Calendar.module.css
@@ -3,11 +3,17 @@
     display: flex;
     flex-direction: column;
     background: #F2F1FA;
-    font-family: 'Comic Sans MS';
+    font-family: 'inter';
     flex-grow: 1;
     margin: 0 auto;
 }
 
 .title {
+    padding-top: 10px;
+    padding-left: 10px;
     margin-bottom: 20px;
+}
+
+.calendar {
+    margin: 0 auto;
 }
